--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
     </header>
 
     <main id="content" class="main-content" role="main">
-      <a href="https://dorfplatz-rotensee.de">Aktivitäten</a> | <a href="https://dorfplatz-rotensee.de/geraete">Geräte</a> | <a href="https://dorfplatz-rotensee.de/impressum">Impressum</a> 
+      <a href="https://dorfplatz-rotensee.github.io">Aktivitäten</a> | <a href="https://dorfplatz-rotensee.github.io/geraete">Geräte</a> | <a href="https://dorfplatz-rotensee.github.io/impressum">Impressum</a> 
       {{ content }}
 
       <footer class="site-footer">
