--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,11 +17,10 @@
 
     <header class="page-header" role="banner">
       <h1 class="project-name">Förderverein Dorfplatz Rotensee</h1>
-      <h2 class="project-tagline">{{ page.title | default: site.title | default: site.github.repository_name }}</h2>
     </header>
 
     <main id="content" class="main-content" role="main">
-      <a href="https://dorfplatz-rotensee.github.io">Aktivitäten</a> | <a href="https://dorfplatz-rotensee.github.io/geraete">Geräte</a> | <a href="https://dorfplatz-rotensee.github.io/Impressum">Impressum</a> 
+      <a href="https://dorfplatz-rotensee.github.io">Home</a> | <a href="https://dorfplatz-rotensee.github.io/Aktivitaeten">Aktivitäten</a> | <a href="https://dorfplatz-rotensee.github.io/Geraete">Geräte</a> | <a href="https://dorfplatz-rotensee.github.io/Impressum">Impressum</a> | <a href="https://dorfplatz-rotensee.github.io/Datenschutz">Datenschutz</a>
       {{ content }}
 
       <footer class="site-footer">
