--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
     </header>
 
     <main id="content" class="main-content" role="main">
-      <a href="https://dorfplatz-rotensee.github.io">Home</a> | <a href="https://dorfplatz-rotensee.github.io/Aktivitaeten">Aktivitäten</a> | <a href="https://dorfplatz-rotensee.github.io/Geraete">Geräte</a> | <a href="https://dorfplatz-rotensee.github.io/Impressum">Impressum</a> | <a href="https://dorfplatz-rotensee.github.io/Datenschutz">Datenschutz</a>
+      <a href="https://dorfplatz-rotensee.github.io">Home</a> | <a href="https://dorfplatz-rotensee.github.io/Aktivitaeten">Aktivitäten</a> | <a href="https://dorfplatz-rotensee.github.io/Geraete">Geräte</a> | <a href="https://dorfplatz-rotensee.github.io/Satzung">Vereinssatzung</a> | <a href="https://dorfplatz-rotensee.github.io/Impressum">Impressum</a> | <a href="https://dorfplatz-rotensee.github.io/Datenschutz">Datenschutz</a>
       {{ content }}
 
       <footer class="site-footer">
