--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,7 @@
 
     <header class="page-header" role="banner">
       <h1 class="project-name">Förderverein Dorfplatz Rotensee</h1>
+      <img src="assets/bilder/Frosch.jpg" alt="Bild eines Frosch" style="width: 300px; height: 200px;">
     </header>
 
     <main id="content" class="main-content" role="main">
