--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,8 +16,9 @@
     <a id="skip-to-content" href="#content">Skip to the content.</a>
 
     <header class="page-header" role="banner">
-      <h1 class="project-name">Förderverein Dorfplatz Rotensee</h1>
-      <img src="assets/bilder/Frosch.jpg" alt="Bild eines Frosch" style="width: 300px; height: 200px;">
+      <h1 class="project-name">Förderverein Dorfplatz Rotensee
+      <img src="assets/bilder/Frosch.jpg" alt="Bild eines Frosch" style="float:right;width: 100px; height: 100px;">
+      </h1>
     </header>
 
     <main id="content" class="main-content" role="main">
