--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
 
     <header class="page-header" role="banner">
       <h1 class="project-name">Förderverein Dorfplatz Rotensee
-      <img src="assets/bilder/Frosch.jpg" alt="Bild eines Frosch" style="float:right;width: 100px; height: 100px;">
+      <img src="assets/img/Frosch.jpg" alt="Bild eines Frosch" style="width: 150px; height: 150px;">
       </h1>
     </header>
 
