--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
       {{ content }}
 
       <footer class="site-footer">
-        &copy; 2025 Nico Schwarz
+        &copy; 2025 Förderverein Dorfplatz Rotensee
       </footer>
     </main>
   </body>
